Fix CSS scrolling overflow on mobile

--- a/_sass/custom/course_overrides.scss
+++ b/_sass/custom/course_overrides.scss
@@ -290,7 +290,8 @@
 
 .py-ref-table {
   table-layout: fixed;
-  width: 100%;
+  overflow-x: auto;
+  display: block;
 
   th:nth-child(1),
   td:nth-child(1) {
